--- a/admin-panel/src/pages/movie/product.css
+++ b/admin-panel/src/pages/movie/product.css
@@ -54,6 +54,9 @@
   display: flex;
   justify-content: space-between;
 }
+.productInfoKey{
+  margin-right: 20px;
+}
 .productInfoValue {
   font-weight: 300;
 }
