--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -1,3 +1,4 @@
+@import '../../App.scss';
 .navbar {
   width: 100%;
   color: white;
@@ -22,10 +23,21 @@
       span {
         margin-right: 20px;
         cursor: pointer;
+        @include tablet{
+          display: none;
+        }
+        &.navbarMainLink{
+          @include tablet{
+            display: block;
+          } 
+        }
       }
       img {
         margin-right: 40px;
         height: 25px;
+        @include mobile{
+          display: none;
+        }
       }
     }
     .right {
